react-app/src/components/HeroSection.css
.hero-container {
  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
  margin: 50px 0 0 50px;
  max-width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  object-fit: contain;
}

.hero-btns {
  margin-top: 32px;
}

.mainImg {
  max-width:100%;
  height:auto;
}

.hero-btns .btn {
  margin: 6px;
}

.fa-play-circle {
  margin-left: 4px;
}

@media screen and (max-width: 960px) {
  .hero-container > h1 {
    font-size: 70px;
    margin-top: -150px;
  }
}

@media screen and (max-width: 768px) {
  .hero-container > h1 {
    font-size: 50px;
    margin-top: -100px;
  }

  .hero-container > p {
    font-size: 30px;
  }

  .btn-mobile {
    display: block;
    text-decoration: none;
  }

  .btn {
    width: 100%;
  }
}

* {
    box-sizing: border-box;
    margin: 0;
}

body {
    font-family: "Roboto", sans-serif;
    background: #D8DEE9;
    position: relative;
    
}

/* Header */


header {
    display: flex;
    justify-content: space-between;
}

header h1 {
  display: flex;
  font-family: 'Lato', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 70px;
  line-height: 75px;
  color: #2E3440;

}

.header-icons {
    display: flex;
    float: left;
    margin-bottom: 100px;
    margin-top: 100px;
}

.header-icons a {
    margin: 0 20px;
}

.header-icons a:nth-of-type(1) {
    margin-left: 0;
}

/* Hero image */

.firsttwo {
    display: flex;
}

.featured-itinerary {
    float: left;
}

.popular {
    margin-left: 10%;
    margin-top: 10%;
}

.nearme {
    position: relative;
    float: left;
    margin-right: 50%;
    margin-top: -25%;
    z-index: 5;
}

